name:                hello-servant-jwt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hello-servant-jwt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-servant-jwt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client
                     , warp
                     , servant-server
                     , servant-client
                     , servant-auth
                     , servant-auth-server
                     , containers
                     , bytestring